--- a/src/sass/modules/layout.scss
+++ b/src/sass/modules/layout.scss
@@ -28,14 +28,14 @@ body {
 .landing-page-header {
     position: absolute;
     margin-top: rem(32px);
-    overflow-x: hidden;
+    overflow: hidden;
     @media (max-width: $breakpoint-nav) {
         margin-top: 0;
     }
     &.-open-nav {
-        overflow-x: initial;
+        overflow: initial;
         @media (min-width: $breakpoint-nav) {
-            overflow-x: hidden;
+            overflow: hidden;
         }
     }
 }
