--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -122,7 +122,7 @@ body {
 .landing-page-header {
   position: absolute;
   margin-top: 2rem;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 @media (max-width: 765px) {
   .landing-page-header {
@@ -130,11 +130,11 @@ body {
   }
 }
 .landing-page-header.-open-nav {
-  overflow-x: initial;
+  overflow: initial;
 }
 @media (min-width: 765px) {
   .landing-page-header.-open-nav {
-    overflow-x: hidden;
+    overflow: hidden;
   }
 }
 
